--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,7 @@
   ],
   "dependencies": {
     "firebase": "2.0.x",
-    "backbone": "<=1.1.0",
+    "backbone": "1.1.2",
     "underscore": "~1.5.2"
   },
   "devDependencies": {
